# amazing-race

./: LICENSE  README.md
source/darknet/: Makefile
source/darknet/python/: darknet.py  detector.py
source/darknet/src/: image.c  image.h
source/husky-custom/src/approach_person/: CMakeLists.txt  package.xml  readme
source/husky-custom/src/approach_person/launch/: start_approach_person.launch
source/husky-custom/src/approach_person/src/: approachable_person_detector.py  darknet.py  map_obj_into_3d_space.py  run_approach_person_tro.py  yolo_detector.py
source/husky-custom/src/brain/: CMakeLists.txt  package.xml
source/husky-custom/src/brain/launch/: start_brain.launch
source/husky-custom/src/brain/src/: run_brain.py
source/husky-custom/src/cartographer_submap_localizer/src/: cartographer_submap_localizer.py
source/husky-custom/src/command_listener/: CMakeLists.txt  package.xml
source/husky-custom/src/command_listener/launch/: start_command_listener.launch
source/husky-custom/src/command_listener/src/: run_command_listener.py
source/husky-custom/src/door_detection/: CMakeLists.txt  package.xml
source/husky-custom/src/door_detection/launch/: door_detection.launch
source/husky-custom/src/door_detection/msg/: Doors.msg
source/husky-custom/src/door_detection/src/: door.py  door_detect.py
source/husky-custom/src/door_detection/srv/: doorCoords.srv  doorText.srv
source/husky-custom/src/door_navigation/: CMakeLists.txt  package.xml
source/husky-custom/src/door_navigation/launch/: door_navigation.launch
source/husky-custom/src/door_navigation/src/: darknet.py  door_navigate.py  door_navigatev2.py  door_navigatev3.py  door_navigatev4.py  generate_doors.py
source/husky-custom/src/door_navigation/srv/: doorTag.srv
source/husky-custom/src/follow_directions/: CMakeLists.txt  package.xml
source/husky-custom/src/follow_directions/launch/: start_follow_directions.launch
source/husky-custom/src/follow_directions/src/: run_follow_directions2.py
source/husky-custom/src/follow_directions/srv/: commandNode.srv  directionsContent.srv
source/husky-custom/src/hold_conversation/: CMakeLists.txt  package.xml
source/husky-custom/src/hold_conversation/launch/: start_hold_conversation.launch
source/husky-custom/src/hold_conversation/src/: directions_conversation.py  nltk_tree_functions.py  run_hold_conversation5_tro.py
source/husky-custom/src/hold_conversation/srv/: conversationContent.srv
source/husky-custom/src/intersection_mapper/: CMakeLists.txt  package.xml
source/husky-custom/src/intersection_mapper/launch/: start_intersection_mapper2.launch
source/husky-custom/src/intersection_mapper/msg/: Routes.msg
source/husky-custom/src/intersection_mapper/src/: run_intersection_mapper2.py
source/husky-custom/src/intersection_mapper/srv/: recoveryRoutes.srv  singleRoute.srv
source/husky-custom/src/mouth_and_ears/: CMakeLists.txt  package.xml
source/husky-custom/src/mouth_and_ears/launch/: start_mouth_and_ears.launch
source/husky-custom/src/mouth_and_ears/src/: Dialog.json  run_mouth_and_ears.py
source/husky-custom/src/mouth_and_ears/srv/: questionAndAnswer.srv
source/husky-custom/src/my_axis_camera/: CMakeLists.txt  package.xml
source/husky-custom/src/my_axis_camera/cfg/: PTZ.cfg
source/husky-custom/src/my_axis_camera/launch/: axis.launch
source/husky-custom/src/my_axis_camera/msg/: Axis.msg
source/husky-custom/src/my_axis_camera/src/: axis_ptz.py
source/husky-custom/src/narration/src/: run_narration.py
source/husky-custom/src/position_markers/: CMakeLists.txt  package.xml
source/husky-custom/src/position_markers/src/: publish_robot_path.py  publish_robot_path2.py
source/husky-custom/src/rviz_marker_publisher/: CMakeLists.txt  package.xml
source/husky-custom/src/rviz_marker_publisher/src/: rviz_marker_publisher.py
source/husky-custom/src/wander/: CMakeLists.txt  package.xml
source/husky-custom/src/wander/launch/: start_wander.launch
source/husky-custom/src/wander/src/: run_wander2.py
source/husky-env/src/husky/husky_control/config/: control.yaml
source/husky-env/src/husky/husky_navigation/config/: costmap_common.yaml  costmap_exploration.yaml  planner.yaml
source/husky-env/src/husky/husky_navigation/launch/: move_base.launch
source/husky-env/src/husky/husky_viz/launch/: view_robot.launch  view_robot_with_rosbag.launch  view_wizard.launch
source/husky-env/src/husky/husky_viz/rviz/: robot.rviz  video.rviz  wizard.rviz
source/husky-env/src/husky_pur22/husky_pur22_bringup/: CMakeLists.txt  package.xml
source/husky-env/src/husky_pur22/husky_pur22_bringup/launch/: VLP16_points.launch  axis.launch
source/husky-env/src/husky_pur22/husky_pur22_description/: CMakeLists.txt  package.xml
source/husky-env/src/husky_pur22/husky_pur22_description/meshes/: PUR22_CAMERA_MOUNT.dae  PUR22_CAMERA_RAIL.dae  PUR22_TOP_PLATE.dae  ptz.dae  vlp16.dae
source/husky-env/src/husky_pur22/husky_pur22_description/scripts/: pur22_envar
source/husky-env/src/husky_pur22/husky_pur22_description/urdf/: husky_pur22_description.urdf.xacro
source/scripts/: demo-brain.sh  keep-network-alive.sh  monitor-hosh-ip.py
source/workspaces/cartographer-ws/: readme
source/workspaces/cartographer-ws/src/cartographer_ros/cartographer_ros/cartographer_ros/: msg_conversion.cc
source/workspaces/cartographer-ws/src/cartographer_ros/cartographer_ros/configuration_files/: hosh_robot_2d.lua
source/workspaces/cartographer-ws/src/cartographer_ros/cartographer_ros/launch/: hosh_robot_2d.launch
