<?xml version="1.0"?>
<package format="2">
  <name>intersection_mapper</name>
  <version>0.0.1</version>
  <description>Creates intersection map from reading occupancy grid</description>
  <maintainer email="jjohanse@purdue.edu">Jared Johansen</maintainer>

  <license>TODO</license>
  <url type="website">None</url>
  <author email="jjohanse@purdue.edu">Jared Johansen</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
