<?xml version="1.0"?>
<package format="2">
  <name>husky_pur22_bringup</name>
  <version>0.0.0</version>
  <description>The husky_pur22_bringup package</description>

  <maintainer email="jcook@clearpathrobotics.com">Josh Cook</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>axis_camera</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <export>
  </export>
</package>
